# CT_video_creator

./: .env.example  .gitignore  .gitmodules  ai_video_creator.py  commands.txt  manual_story_prompt_template.txt  pyproject.toml  requirements-docker.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
ai_video_creator/: __init__.py  ai_video_creator.py  environment_variables.py  requirements.txt  video_assembler.py  video_asset_manager.py  video_creator.py  video_creator_main.py  video_creator_test.py  video_recipe.py  video_recipe_paths.py
ai_video_creator/ComfyUI_automation/: __init__.py  comfyui_helpers.py  comfyui_helpers_test.py  comfyui_manager.py  comfyui_requests.py  comfyui_requests_test.py  comfyui_server_manager.py  comfyui_sweepers.py  comfyui_workflow.py  custom_logger.py  environment_variables.py  sweepers_example.py
ai_video_creator/audio/: audio_generation.py  audio_generation_test.py  environment_variables.py
ai_video_creator/book/: story_base_prompt.txt
ai_video_creator/comfyui/: comfyui_image_workflows.py  comfyui_requests.py  comfyui_text_workflows.py  comfyui_video_workflows.py
ai_video_creator/generators/: __init__.py  audio_generator.py  background_music_generator.py  description_generator.py  image_generator.py  subtitle_generator.py  video_generator.py
ai_video_creator/helpers/: ffmpeg_helpers.py  video_recipe_paths.py
ai_video_creator/media_effects/: effect_base.py  effects_map.py
ai_video_creator/modules/: narrator_and_image_asset_manager.py  narrator_and_image_recipe.py  video_assembler.py  video_recipe.py  (+3 more)
ct_video_creator/: __init__.py  environment_variables.py  video_creator.py  video_creator_main.py
(+240 files in other folders)
