# pyproject.toml
[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_video_creator"
version = "0.4"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["ai_video_creator*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
# Read and parse requirements.txt
dependencies = { file = ["requirements.txt"] }