# pyproject.toml
[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ct_video_creator"
version = "0.5"
dynamic = ["dependencies"]

[tool.setuptools.package-data]
"ct_video_creator.comfyui" = ["workflows/*.json"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["ct_video_creator*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
# Read and parse requirements.txt
dependencies = { file = ["requirements.txt"] }